--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Matthew Holmberg",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.14"
+    "mongoose": "^5.10.15"
   }
 }
